commit before relocate local repo

--- a/exercise/components/Poster/poster.scss
+++ b/exercise/components/Poster/poster.scss
@@ -9,11 +9,11 @@ div.poster{
   }
 }
 
-.title{
+.poster-card-title{
   font-size: 1em;
   color: lightgrey;
 }
-.subtitle{
+.poster-card-subtitle{
   font-size: .75em;
   color: darkgrey;
 }
