--- a/exercise/scss/styles.scss
+++ b/exercise/scss/styles.scss
@@ -3,7 +3,7 @@
 body{
   margin: 0;
   padding: 0;
-  font-family: 'Prompt', 'sans-serif';
+  font-family: 'Prompt', Arial, Helvetica, sans-serif;
   background-color: #f8f8f8;
 }
 h1{
@@ -17,6 +17,11 @@ nav{
     text-decoration: none;
     color: $primary-link;
   }
+}
+
+a.card{
+  user-select: none;
+  -webkit-user-drag: none;
 }
 
 section{
