--- a/exercise/components/MovieTable/movieTable.scss
+++ b/exercise/components/MovieTable/movieTable.scss
@@ -1,3 +1,6 @@
 .movieTable{
-  outline: blue 1px solid;
+  background-color: #fcfcfc;
+  box-shadow: #77777777 0 0 8px 0px;
+  border-radius: 20px;
+  padding: 2em;
 }
