--- a/exercise/components/Poster/poster.scss
+++ b/exercise/components/Poster/poster.scss
@@ -1,19 +1,58 @@
-div.poster{  
-  height: 180px;
-  min-width: 150px;
-  img{
-    display: block;
-    height: 100%;
-    object-fit: fill;
-    background-color: #22222211;
+a.poster{
+  display: flex;
+  flex-direction: column;
+  
+  
+  transition: all .3s;
+  &:hover{
+    box-shadow: #ffdc6ad8 0 0 8px 0.5px;
+    background-color: rgb(56, 54, 47);
+    * {
+     color: white;
+    }
+    img {
+      filter: brightness(1.1) contrast(0.85) saturate(1.2);
+    }
   }
 }
 
+a.card{
+  background-color: rgb(51, 50, 46);
+  box-shadow: 0 0 3px 1px #0000002C;
+  text-decoration: none;
+}
+
+div.poster{  
+  height: 220px;
+  width: 150px;
+  img{
+    user-select: none;
+    -webkit-user-drag: none;
+    display: block;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    background-color: white;
+    transition: all .3s;
+  }
+}
+
+.vertical-middle{
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .poster-card-title{
+  width: 150px;
   font-size: 1em;
+  line-height: 1.25em;
   color: lightgrey;
+  text-align: center;
+  transition: all .3s;
 }
 .poster-card-subtitle{
   font-size: .75em;
   color: darkgrey;
+  text-align: center;
+  transition: all .3s;
 }
