--- a/exercise/components/MovieEntry/movieEntry.scss
+++ b/exercise/components/MovieEntry/movieEntry.scss
@@ -1,16 +1,14 @@
 .movieEntry{
   display: grid;
-  grid-template-columns: auto 2fr 1fr;
+  grid-template-columns: auto auto auto;
   grid-column-gap: 8px;
   margin: 5px 0;
   .entry-moviePoster{
-    grid-area: 'poster';
     width: 150px;
     img{
       display: block;
       width: 100%;
-      // background-color: grey;
-      // object-fit: contain;
+      user-select: none;
     }
   }
   .entry-details{
@@ -20,21 +18,83 @@
     padding: 5px;
     .entry-title{
       font-style: italic;
-      font-size: 1.1em;
+      font-weight: bold;
+      font-size: 1.25em;
+      color: crimson;
+    }
+    .entry-price{
+      margin-right: 8px;
+      float: right;
+      border-radius: 4px;
+      color: #ececec;
+      background-color: #333333;
+      font-weight: bold;
+      font-size: 0.9em;
+      padding: 0 7px;
     }
     .entry-duration{
-      font-size: .75em;
+      font-size: .9em;
+      font-style: italic;
+      font-weight: bold;
+      color: #333;
+      background-color: #ffcc33;
+      width: fit-content;
+      padding: 0 6px;
+      border-radius: 4px;
+      user-select: none;
     }
     .entry-synopsis{
       text-align: center;
       font-style: italic;
+      font-size: 1.1em;
+      margin: 5px 0;
+      color: #333;
     }
     .entry-description{
-      font-weight: 300;
+      color: #555;
       font-size: 0.85em;
     }
   }
   .entry-action{
     // outline: lightseagreen 1px solid;
+    h3{
+      margin: 8px 0;
+    }
+    .showtimes{
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: 4px;
+      h3{
+        grid-column: 1 / span 4;
+        min-width: 240px;
+      }
+      label{
+        background-color: #ffcc33;
+        padding: 2px 4px;
+        border-radius: 4px;
+        display: inline-block;
+        min-width: 48px;
+        min-height: 24px;
+        text-align: center;
+        user-select: none;
+      }
+    }
+    a.ticket{
+      display: block;
+      border: none;
+      border-radius: 8px;
+      background-color: crimson;
+      color: white;
+      font-size: 1.25em;
+      padding: 8px 18px;
+      min-width: 140px;
+      width: fit-content;
+      text-decoration: none;
+      text-align: center;
+      box-sizing: border-box;
+      margin: 8px auto;
+      cursor: pointer;
+      user-select: none;
+    }
   }
 }
