--- a/exercise/components/Navbar/navbar.scss
+++ b/exercise/components/Navbar/navbar.scss
@@ -8,7 +8,7 @@ input{
     font-size: 1em;
     line-height: 1em;
     height: 32px;
-    width: 250px;
+    max-width: 300px;
   }
   &[type=button]{
     border-radius: 0 8px 8px 0;
